--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -17,7 +17,7 @@ title: Liquid Documentation
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Liquid Documentation
-baseurl: "/liquid-docs/" # the subpath of your site, e.g. /blog
+baseurl: "/liquid-docs" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
