--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,9 @@ collections:
   filters:
     output: true
     permalink: /:collection/:title
+  blueprints:
+    output: true
+    permalink: /:collection/:title
 
 # Build settings
 markdown: kramdown
