Adding in Building Blocks

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -35,6 +35,9 @@ collections:
   blueprints:
     output: true
     permalink: /:collection/:title 
+  blocks:
+    output: true
+    permalink: /:collection/:title 
 
 # Build settings
 markdown: kramdown
