adding in registration endpoint

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,6 +29,9 @@ collections:
   models:
     output: true
     permalink: /:collection/:title
+  endpoint:
+    output: true
+    permalink: /:collection/:title
   filters:
     output: true
     permalink: /:collection/:title
